--- a/package.json
+++ b/package.json
@@ -19,14 +19,18 @@
   },
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cassandra-driver": "^4.1.0",
     "compression": "^1.7.4",
     "concurrently": "^4.1.2",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "faker": "^4.1.0",
+    "fs": "0.0.1-security",
     "moment": "^2.24.0",
     "mongodb": "^3.3.2",
     "mongoose": "^5.6.12",
     "morgan": "^1.9.1",
+    "pg": "^7.12.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "styled-components": "^4.3.2",
