--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "Reservations",
   "version": "",
   "description": "module for making reservations",
-  "author": "Jason Chen",
+  "author": "Rachel Klinkatsis",
   "license": "",
   "engines": {
     "node": ">=6.13.0"
@@ -14,8 +14,7 @@
     "nodemon": "nodemon server/server.js",
     "test:watch": "jest --watchAll --config jest.config.js",
     "test:coverage": "jest --verbose --coverage",
-    "server": "node server/server.js",
-    "start": "concurrently \"npm run seed\" \"npm run server\""
+    "start": "nodemon server/server.js"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
@@ -30,9 +29,12 @@
     "mongodb": "^3.3.2",
     "mongoose": "^5.6.12",
     "morgan": "^1.9.1",
+    "newrelic": "^5.11.0",
     "pg": "^7.12.1",
+    "pg-hstore": "^2.3.3",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "sequelize": "^5.18.4",
     "styled-components": "^4.3.2",
     "uglify-js": "^3.6.0"
   },
@@ -60,7 +62,7 @@
     "grunt-contrib-compress": "^1.5.0",
     "jest": "^24.9.0",
     "jest-config": "^24.9.0",
-    "nodemon": "^1.19.1",
+    "nodemon": "^1.19.2",
     "path": "^0.12.7",
     "url-loader": "^2.1.0",
     "webfontloader": "^1.6.28",
